<resources>
    <string name="app_name" translatable="false">MyDiet</string>

    <string name="welcome">Добро пожаловать!</string>
    <string name="introduction">Укажите некоторые данные о себе, чтобы мы могли предоставить персональные рекомендации</string>
    <string name="buttonContinue">Продолжить</string>
    <string name="height">Укажите ваш рост</string>
    <string name="cm">См</string>

    <string name="gender">Укажите ваш пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>

    <string name="userAge">Укажите ваш возраст</string>
    <string name="age">Лет</string>
    <string name="enterYourWeight">Введите свой вес</string>

    <string name="activeness">Расскажите о своей активности</string>
    <string name="activeVariant1">Физическая активность отсутствует</string>
    <string name="activeVariant2">Умеренные тренировки 3 раза в неделю</string>
    <string name="activeVariant3">Умеренные тренировки 5 раз в неделю</string>
    <string name="activeVariant4">Интенсивные тренировки 5 раз в неделю</string>
    <string name="activeVariant5">Ежедневные тренировки</string>
    <string name="activeVariant6">Ежедневные тренировки по 2 раза в день</string>
    <string name="activeVariant7">Ежедневные тренировки и физическая работа</string>

    <string name="resultHead">Подведём итоги</string>
    <string name="resultBody">Ежедневно вам требуется</string>
    <string name="calories">Килокалории</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="glasses">Стаканы воды</string>

    <string name="caloriesRemainText">Килокалорий осталось</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="dinner">Ужин</string>
    <string name="snack">Перекус</string>
    <string name="kcalBreakfast">Ккал</string>
    <string name="back">Назад</string>
    <string name="whatDidYouEat">Что вы съели?</string>
    <string name="enterValue">Введите значение</string>
    <string name="enterCorrectValue">Введите корректное значение</string>
    <string name="save">Сохранить</string>
    <string name="kcalExcess">Килокалорий превышено</string>
    <string name="excess">превышение</string>

    <string name="timeToHaveBreakfast">Время для завтрака!</string>
    <string name="dontForgetToEnterYourData">Не забудьте ввести данные</string>
    <string name="timeToHaveLunch">Время для обеда!</string>
    <string name="timeToHaveDinner">Время для ужина!</string>
    <string name="enter_your_weight">Укажите ваш вес</string>
    <string name="kg">Кг</string>
    <string name="me">Я</string>
    <string name="eating">ПИТАНИЕ</string>
    <string name="statistics">Статистика</string>
    <string name="your_limit">Ваша норма</string>
    <string name="average_kcal">Среднее потребление калорий</string>
    <string name="gram">Грамм</string>
    <string name="you_have_eaten">Вы съели:</string>
    <string name="days">Дни</string>
    <string name="advice">Совет:</string>
    <string name="EnterCorrectValue">Введите корректное значение</string>
    <string name="ChooseYourGender">Выберите свой пол</string>

    <array name="advices">
        <item>@string/advice1</item>
        <item>@string/advice2</item>
        <item>@string/advice3</item>
        <item>@string/advice4</item>
        <item>@string/advice5</item>
        <item>@string/advice6</item>
        <item>@string/advice7</item>
        <item>@string/advice8</item>
        <item>@string/advice9</item>
        <item>@string/advice10</item>
    </array>

    <string name="advice1">На завтрак рекомендуется потреблять 25% от суточной нормы калорий</string>
    <string name="advice2">На обед рекомендуется потреблять 35% от суточной нормы калорий</string>
    <string name="advice3">На ужин рекомендуется потреблять 15% от суточной нормы калорий</string>
    <string name="advice4">На перекусы должно приходиться 25% от суточной нормы калорий</string>
    <string name="advice5">Старайтесь включать в рацион больше овощей и фруктов</string>
    <string name="advice6">Промежутки между приёмами пищи должны составлять 4–5 часов</string>
    <string name="advice7">Пейте больше воды</string>
    <string name="advice8">В течение дня должно быть запланировано 2 перекуса</string>
    <string name="advice9">Вечером нужно потреблять меньше углеводов</string>
    <string name="advice10">Постарайтесь отказаться от сладкого</string>

    <string name="sendsNotification">Канал для отправки уведомлений о приёмах пищи</string>

</resources>