<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green_light">

    <TextView
        style="@style/headStyle"
        android:text="@string/gender"
        />

    <RadioGroup
        android:id="@+id/genderRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"
            android:fontFamily="@font/mplus1p_regular"
            android:textColor="@color/black"
            android:buttonTint="@color/green_dark"/>
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"
            android:fontFamily="@font/mplus1p_regular"
            android:textColor="@color/black"
            android:buttonTint="@color/green_dark" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_next"
        style="@style/buttonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cornerRadius="45dp" />


</RelativeLayout>