<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    tools:context=".MealActivity">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/green_dark"
        app:cornerRadius="32dp"
        app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:iconTint="@color/white" />


    <TextView
        android:id="@+id/mealHeadline"
        style="@style/headStyle" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/WhatDidYouEatBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"
        app:boxStrokeColor="@color/black"
        android:layout_toEndOf="@id/CoefficientBox"
        android:layout_alignParentEnd="true"
        app:endIconTint="@color/green_dark"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/autocompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:backgroundTint="@color/green_dark"
            android:fontFamily="@font/mplus1p_regular"
            android:gravity="start"
            android:hint="@string/whatDidYouEat"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CoefficientBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"


        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCoefficient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:fontFamily="@font/mplus1p_regular"
            android:gravity="start"
            android:hint="@string/gram"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:text="100"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/youHaveEatenText"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_above="@id/KcalBox"
        android:layout_below="@id/CoefficientBox"
        android:fontFamily="@font/mplus1p_regular"
        android:singleLine="true"
        android:text="@string/you_have_eaten"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/KcalBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/WhatDidYouEatBox"
        android:layout_centerHorizontal="true"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editKcal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:fontFamily="@font/mplus1p_regular"
            android:gravity="start"
            android:hint="@string/kcalBreakfast"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ProteinsBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/KcalBox"
        android:layout_marginTop="32dp"
        android:layout_toStartOf="@id/FatsBox"
        android:layout_marginEnd="32dp"
        android:layout_centerHorizontal="true"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editProteins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:fontFamily="@font/mplus1p_regular"
            android:gravity="start"
            android:hint="@string/proteins"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FatsBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/KcalBox"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:fontFamily="@font/mplus1p_regular"
            android:gravity="start"
            android:hint="@string/fats"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CarbohydratesBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/KcalBox"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@id/FatsBox"
        android:layout_marginStart="32dp"
        android:layout_centerHorizontal="true"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCarbohydrates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:fontFamily="@font/mplus1p_regular"
            android:gravity="start"
            android:hint="@string/carbohydrates"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/advice_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/WhatDidYouEatBox"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green_light"
        android:fontFamily="@font/mplus1p_regular"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:iconTint="@color/green_dark"
        app:cornerRadius="30dp"
        app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:iconGravity="end" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/enterButton"
        style="@style/buttonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        app:cornerRadius="45dp" />


</RelativeLayout>